<resources>
    <string name="app_name">MyHomework1</string>
    <string name="welcome_message">Доброе утро!</string>
    <string name="news">Самые свежие и актуальные последние новости за сегодня.</string>
    <string name="news_button">Узнать</string>
    <string name="terms_of_use">Вы согласны с нашим пользовательским соглашением</string>
    <string name="ad_toggle_button">Вы можете выключить подпискуна наши новости</string>
    <string name="textOff_ad">Включить рекламу</string>
    <string name="textOn_ad">Выключить рекламу</string>
    <string name="text_input">Введите текст</string>
    <string name="name_input">Введите имя</string>
    <string name="phone_input">Введите номер телефона</string>
    <string name="number_input">Введите число</string>
    <string name="password_input">Введите пароль</string>
    <string name="email_input">Введите email</string>
    <string name="data_input">Введите дату</string>
    <string name="big_text_input">Введите большой текст</string>
    <string name="subscription_news">Оформить подписку на наши новости</string>
</resources>